// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Notification List can render correctly 1`] = `
<div
  className="root"
  role="list"
>
  <div
    aria-selected={false}
    className="root"
    data-level="info"
    role="listitem"
  >
    message
  </div>
</div>
`;

exports[`Project Notification List can render with empty list of notification 1`] = `
<div
  className="root"
  role="list"
/>
`;

exports[`Project Notification List should set timeout specified 1`] = `
<div
  className="root"
  role="list"
>
  <div
    aria-selected={false}
    className="root"
    data-level="warning"
    role="listitem"
  >
    message
  </div>
</div>
`;
